# Risk-Copilot

./: .docker-build.err  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  Risk Copilot AWS Deployment.md  aws-ecs-architecture.html  pyproject.toml  requirements.txt  risk_advisor.db
.github/agents/: progress-auditor.agent.md  risk-copilot-builder.agent.md  risk-copilot.agent.md
app/: __init__.py
app/agents/: orchestrator.py  prompts.py  risk_interpreter.py
app/api/: main.py
app/core/: config.py  logging.py
app/data/: __init__.py  market_data.py  mock_market.py  mock_trades.py  portfolio_catalog.py  regulatory_seed.py
app/db/: __init__.py  session.py  tables.py
app/models/: __init__.py  regulatory.py  risk_models.py  schemas.py
app/risk/: __init__.py  drivers.py  engine.py  exposure.py  limits.py  stress.py  var.py
risk-ai-copilot/: .env.example  pyproject.toml
risk-ai-copilot/app/agents/: orchestrator.py  risk_interpreter.py
risk-ai-copilot/app/core/: config.py
risk-ai-copilot/app/data/: mock_market.py
risk-ai-copilot/app/db/: session.py
risk-ai-copilot/app/models/: risk_models.py  schemas.py
risk-ai-copilot/app/risk/: drivers.py  exposure.py  var.py
risk-ai-copilot/app/services/: chat_service.py  risk_service.py
risk-ai-copilot/tests/: test_health.py  test_risk_engine.py
scripts/: example_payload.json
tests/: test_chat.py  test_config.py  test_dashboard.py  test_health.py  test_market_data.py  test_phase1_status.py  test_regulatory_api.py  test_regulatory_service.py  test_reports.py  test_risk_engine.py  test_stress.py
(+22 files in other folders)
