[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "risk-ai-copilot"
version = "0.1.0"
description = "AI-Enhanced Risk Monitoring and Decision Support System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "pydantic>=2.8.0,<3.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "pandas>=2.2.0,<3.0.0",
    "numpy>=2.0.0,<3.0.0",
    "chromadb>=0.5.0,<1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
